# Anonymous-G1t

./: .gitignore  .prettierignore  .replit  Cargo.toml  Dockerfile  README.md  agit.toml  mygit.toml  replit.nix  rust-toolchain.toml  rustfmt.toml
src/: errorpage.rs  filters.rs  main.rs  routes.rs
src/routes/: index.rs  repo_commit.rs  repo_file.rs  repo_home.rs  repo_log.rs  repo_log_feed.rs  repo_refs.rs  repo_refs_feed.rs  repo_tag.rs  static_resource.rs
syntaxes/: Markdown.sublime-syntax
templates/: base.html  commit-tr.html  commit.html  error.html  file.html  index.html  last-commit.html  list-threads.html  log.html  log.xml  refs.html  refs.xml  repo-navbar.html  repo.html  tag.html  tree.html
templates/static/: code.css  prism.css  prism.js  style.css
