[package]
name = "agit"
version = "0.1.0"
authors = [
  "alex wennerberg <alex@alexwennerberg.com>",
  "Jay Jackson <jj@jj.is-a.dev>",
]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not using features config and num-traits
askama = { version = "0.10", default-features = false, features = [
  "humansize",
  "urlencode",
  "with-tide",
] }
askama_tide = "0.13"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.48"
chrono = "0.4"
git2 = { version = "0.13", default-features = false }
lazy_static = "1.0"
percent-encoding = "2.1"
pico-args = "0.4"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
# not using feature dump-create
syntect = { version = "4.5", default-features = false, features = [
  "assets",
  "dump-load",
  "html",
  "parsing",
  "regex-onig",
  "yaml-load",
] }
# not using feeatures cookies and sessions
tide = { version = "0.16", default-features = false, features = [
  "h1-server",
  "logger",
] }
toml = "0.5.8"
rust-embed = { version = "6.3", features = ["interpolate-folder-path"] }
femme = { git = "https://github.com/TheBotlyNoob/femme" }
regex = "1.5"
