[package]
name = "agit"
version = "0.1.0"
authors = [
    "alex wennerberg <alex@alexwennerberg.com>",
    "Jay Jackson <jj@jj.is-a.dev>",
]
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# not using features config and num-traits
askama = { version = "0.12", default-features = false, features = [
    "humansize",
    "urlencode",
    "with-tide",
] }
askama_tide = "0.15"
async-std = { version = "1.8.0", features = ["attributes"] }
async-trait = "0.1.48"
chrono = "0.4"
git2 = { version = "0.17", default-features = false }
lazy_static = "1.0"
percent-encoding = "2.1"
pico-args = "0.5"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
syntect = "5.0"
tide = "0.16"
toml = "0.7"
rust-embed = { version = "6.3", features = ["interpolate-folder-path"] }
regex = "1.5"
